--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,3 +36,17 @@ html {
   margin-left: 50px;
 }
 
+/* code from example index.html provided in HW 14 */
+/* background image details */
+.hero {
+  position: relative;
+  height: 650px;
+  padding: 20px;
+  margin: 0;
+  background: black;
+  /* 2020 image - source:https://tritontimes.com/28761/columns/2020-is-off-to-a-terrible-start/*/
+  background-image: url("../../data/2020.png");
+  background-position:center;
+  background-size: cover;
+  background-position-y: bottom;
+}
