--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
 
     <p>Here it is.</p>
-    <p id= "news"></p>
-    <!-- <div id='chart'></div> -->
-    <canvas id="myChart"></canvas>
-    <canvas id="myChart2"></canvas>
+    <div id='chart'></div>
+    <!-- <canvas id="myChart"></canvas>
+    <canvas id="myChart2"></canvas> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> -->
 
     <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <!-- <script type="text/javascript" src="plots.js"></script> -->
+    <script type="text/javascript" src="plots.js"></script>
     <!-- <script type="text/javascript" src="news.js"></script> -->
-    <script type="text/javascript" src="two_pies.js"></script>
+    <!-- <script type="text/javascript" src="two_pies.js"></script> -->
 
 </body>
 
