--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -11,9 +11,11 @@
 <body>
 
     <p>Here it is.</p>
+    <div id='basechart'></div>
+    <br>
     <div id='chart'></div>
-    <canvas id="myChart"></canvas>
-    <canvas id="myChart2"></canvas>
+    <!-- <canvas id="myChart"></canvas>
+    <canvas id="myChart2"></canvas> -->
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
