added national mobility listener

--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -11,6 +11,9 @@
 <body>
 
     <p>Here it is.</p>
+
+    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+
     <div id='basechart'></div>
     <br>
     <div id='chart'></div>
