second listener working

--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-
+    <div id='headline'></div>
     <p>Here it is.</p>
 
+    <!-- <select id="selDay" onchange="dayChanged(this.value)"></select> -->
     <select id="selDataset" onchange="optionChanged(this.value)"></select>
+
 
     <div id='basechart'></div>
     <br>
@@ -27,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
     <!-- <script type="text/javascript" src="plots.js"></script> -->
     <!-- <script type="text/javascript" src="news.js"></script> -->
-    <!-- <script type="text/javascript" src="two_pies.js"></script> -->
+    <!-- <script type="text/javascript" src="state.js"></script> -->
     <script type="text/javascript" src="polar.js"></script>
 
 </body>
