--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
       
         <!-- Our CSS -->
-        <link rel="stylesheet" type="text/css" href="static/css/style.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/style.css">
       </head>
       <body>
       
@@ -20,17 +20,18 @@
           <select name="Compare" id="compare" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
         </div>
         <div id="unemployment"></div>
+        <div id="stockChart"></div>
       
         <!-- Leaflet JavaScript -->
         <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
         <!-- D3 JavaScript -->
         <script src="https://d3js.org/d3.v6.min.js"></script>
         <!-- Our JavaScript -->
-        <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
-        <!-- <script type="text/javascript" src="static/js/airPollution.js"></script> -->
-        <!-- <script type="text/javascript" src="static/js/unemployment.js"></script> -->
-        <script type="text/javascript" src="static/js/stock.js"></script>
+        <!-- <script type="text/javascript" src="../static/js/logic.js"></script> -->
+        <!-- <script type="text/javascript" src="../static/js/airPollution.js"></script> -->
+        <!-- <script type="text/javascript" src="../static/js/unemployment.js"></script> -->
+        <script type="text/javascript" src="../static/js/stock.js"></script>
         <!-- API Key-->
-        <script type="text/javascript" src="static/js/config.js"></script>
+        <script type="text/javascript" src="../static/js/config.js"></script>
       </body>
 </html>
