--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id='headline'></div>
+    <div id='art_image'></div>
     <p>Here it is.</p>
 
     <!-- <select id="selDay" onchange="dayChanged(this.value)"></select> -->
@@ -25,12 +26,12 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
     <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
     <!-- <script type="text/javascript" src="plots.js"></script> -->
-    <!-- <script type="text/javascript" src="news.js"></script> -->
+    <script type="text/javascript" src="static/js/news.js"></script>
     <!-- <script type="text/javascript" src="state.js"></script> -->
-    <script type="text/javascript" src="polar.js"></script>
+    <!-- <script type="text/javascript" src="static/js/polar.js"></script> -->
 
 </body>
 
