create selection dropdowns for stock chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,16 @@
           <select name="Compare" id="compare" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
         </div>
         <div id="unemployment"></div>
+
+        <div class="custom-select" style="width:200px;">
+          <select name="Stock1" id="stock1" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+        </div>
+        <div class="custom-select" style="width:200px;">
+          <select name="Stock2" id="stock2" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+        </div>
+        <div class="custom-select" style="width:200px;">
+          <select name="Stock3" id="stock3" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+        </div>
         <div id="stockChart"></div>
       
         <!-- Leaflet JavaScript -->
@@ -29,7 +39,7 @@
         <!-- Our JavaScript -->
         <!-- <script type="text/javascript" src="../static/js/logic.js"></script> -->
         <!-- <script type="text/javascript" src="../static/js/airPollution.js"></script> -->
-        <!-- <script type="text/javascript" src="../static/js/unemployment.js"></script> -->
+        <script type="text/javascript" src="../static/js/unemployment.js"></script>
         <script type="text/javascript" src="../static/js/stock.js"></script>
         <!-- API Key-->
         <script type="text/javascript" src="../static/js/config.js"></script>
