eddited query for state mobility data pull

--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -20,17 +20,14 @@
     <div id='basechart'></div>
     <br>
     <div id='chart'></div>
-    <!-- <canvas id="myChart"></canvas>
-    <canvas id="myChart2"></canvas> -->
+  
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
-    <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-    <!-- <script type="text/javascript" src="plots.js"></script> -->
-    <script type="text/javascript" src="static/js/news.js"></script>
-    <!-- <script type="text/javascript" src="state.js"></script> -->
+    <!-- <script type="text/javascript" src="static/js/news.js"></script> -->
+    <script type="text/javascript" src="static/js/state.js"></script>
     <!-- <script type="text/javascript" src="static/js/polar.js"></script> -->
 
 </body>
