--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -10,16 +10,19 @@
 
 <body>
     <div id='headline'></div>
+    <br>
     <div id='art_image'></div>
+    <br>
     <p>Here it is.</p>
 
-    <!-- <select id="selDay" onchange="dayChanged(this.value)"></select> -->
+    <select id="selDay" onchange="dayChanged(this.value)"></select>
     <select id="selDataset" onchange="optionChanged(this.value)"></select>
 
 
     <div id='basechart'></div>
     <br>
     <div id='chart'></div>
+    <div id='statechart'></div>
   
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
@@ -27,8 +30,8 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
     <!-- <script type="text/javascript" src="static/js/news.js"></script> -->
-    <script type="text/javascript" src="static/js/state.js"></script>
-    <!-- <script type="text/javascript" src="static/js/polar.js"></script> -->
+    <script type="text/javascript" src="static/js/states.js"></script>
+    <script type="text/javascript" src="static/js/polar.js"></script>
 
 </body>
 
