stock chart working for three selections, but labels are mismatched

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
         <div id="unemployment"></div>
 
         <div class="custom-select" style="width:200px;">
-          <select name="Stock1" id="stock1" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+          <select name="Stock1" id="stock1" onChange="selectStock(id, this.value)"></select>
         </div>
         <div class="custom-select" style="width:200px;">
-          <select name="Stock2" id="stock2" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+          <select name="Stock2" id="stock2" onChange="selectStock(id, this.value)"></select>
         </div>
         <div class="custom-select" style="width:200px;">
-          <select name="Stock3" id="stock3" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+          <select name="Stock3" id="stock3" onChange="selectStock(id, this.value)"></select>
         </div>
         <div id="stockChart"></div>
       
