linked news.js and polar.js

--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -30,8 +30,9 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
     <!-- <script type="text/javascript" src="static/js/news.js"></script> -->
-    <script type="text/javascript" src="static/js/states.js"></script>
-    <script type="text/javascript" src="static/js/polar.js"></script>
+    <!-- <script type="text/javascript" src="static/js/states.js"></script> -->
+    <!-- <script type="text/javascript" src="static/js/polar.js"></script> -->
+    <script type="text/javascript" src="static/js/all_plots.js"></script>
 
 </body>
 
