put all components into cards, some css edits

--- a/page_design/material-kit-master/assets/css/material-kit.css
+++ b/page_design/material-kit-master/assets/css/material-kit.css
@@ -17171,7 +17171,8 @@ footer .pull-center {
 .card.bg-primary,
 .card.card-rotate.bg-primary .front,
 .card.card-rotate.bg-primary .back {
-  background: linear-gradient(60deg, #ab47bc, #7b1fa2);
+  background: #607D8B;
+  /* linear-gradient(60deg, #ab47bc, #7b1fa2); */
 }
 
 .card .card-header-info,
@@ -17210,7 +17211,7 @@ footer .pull-center {
 }
 
 .card .card-header-primary {
-  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(156, 39, 176, 0.6);
+  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(96, 125, 139, 0.6);
 }
 
 .card .card-header-danger {
@@ -18191,12 +18192,12 @@ footer .pull-center {
 }
 
 .slider .noUi-connect {
-  background-color: #9c27b0;
+  background-color: #546E7A;
   border-radius: 4px;
 }
 
 .slider .noUi-handle {
-  border-color: #9c27b0;
+  border-color: #546E7A;
 }
 
 .slider.slider-info .noUi-connect {
