deleted superfluous files, misc. edits

--- a/page_design/material-kit-master/assets/css/material-kit.css
+++ b/page_design/material-kit-master/assets/css/material-kit.css
@@ -18192,12 +18192,12 @@ footer .pull-center {
 }
 
 .slider .noUi-connect {
-  background-color: #546E7A;
+  background-color: #2980B9;
   border-radius: 4px;
 }
 
 .slider .noUi-handle {
-  border-color: #546E7A;
+  border-color: #2980B9;
 }
 
 .slider.slider-info .noUi-connect {
