removed baseline chart

--- a/Ryan/templates/index.html
+++ b/Ryan/templates/index.html
@@ -19,7 +19,7 @@
     <select id="selDataset" onchange="optionChanged(this.value)"></select>
 
 
-    <div id='basechart'></div>
+    <!-- <div id='basechart'></div> -->
     <br>
     <div id='chart'></div>
     <div id='statechart'></div>
