--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -174,7 +174,7 @@ The above copyright notice and this permission notice shall be included in all c
               <h4 class="card-header card-header-primary">How has COVID impacted mobility?</h4>
               <div class="card-body">
                 <p class="description">insert plotly chart here</p>
-                <!-- <div id='mobility_plot'></div> -->
+                <div id='mobility_plot'></div>
               </div>
             </div>
             <!-- end mobility card -->
@@ -256,9 +256,10 @@ The above copyright notice and this permission notice shall be included in all c
   <script type="text/javascript" src="../static/js/GT-project/leaflet-heat.js"></script>
   <script src='../static/js/GT-project/us-states.js'></script>
   <!-- created js files -->
+  <script src='../static/js/GT-project/logic_slider_map.js'></script>
   <script src="../static/js/GT-project/covid_logic.js"></script>
   <script src="../static/js/GT-project/ratings_logic.js"></script>
-  <script src='../static/js/GT-project/logic_slider_map.js'></script>
+  <script src="../static/js/GT-project/all_plots.js"></script>
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
   <script src="../static/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
   <script>
