--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Leaflet Step-1</title>
-        <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-        <!-- Leaflet CSS -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
-      
-        <!-- Our CSS -->
-        <link rel="stylesheet" type="text/css" href="../static/css/style.css">
-      </head>
-      <body>
-      
-        <!-- The div that holds our map -->
-        <!-- <div id="map"></div> -->
-        <div class="custom-select" style="width:200px;">
-          <select name="Compare" id="compare" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
-        </div>
-        <div id="unemployment"></div>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Leaflet Step-1</title>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+</head>
+
+<body>
+
+
+  <div id="slider-date" current_time="1588954861000"></div>
+  <!-- The div that holds our map -->
+  <!-- <div id="map"></div> -->
+  <div class="custom-select" style="width:200px;">
+    <select name="Compare" id="compare" onChange="selectOption(this.options[this.selectedIndex].value)"></select>
+  </div>
+  <div id="unemployment"></div>
+  <table>
+    <tr>
+      <td>
         <div class="custom-select" style="width:200px;">
           <select name="Stock1" id="stock1" onChange="selectStock(id, this.value)"></select>
         </div>
+      </td>
+      <td>
         <div class="custom-select" style="width:200px;">
           <select name="Stock2" id="stock2" onChange="selectStock(id, this.value)"></select>
         </div>
+      </td>
+      <td>
         <div class="custom-select" style="width:200px;">
           <select name="Stock3" id="stock3" onChange="selectStock(id, this.value)"></select>
         </div>
-        <div id="stockChart"></div>
-      
-        <!-- Leaflet JavaScript -->
-        <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
-        <!-- D3 JavaScript -->
-        <script src="https://d3js.org/d3.v6.min.js"></script>
-        <!-- Our JavaScript -->
-        <!-- <script type="text/javascript" src="../static/js/logic.js"></script> -->
-        <!-- <script type="text/javascript" src="../static/js/airPollution.js"></script> -->
-        <script type="text/javascript" src="../static/js/unemployment.js"></script>
-        <script type="text/javascript" src="../static/js/stock.js"></script>
-        <!-- API Key-->
-        <script type="text/javascript" src="../static/js/config.js"></script>
-      </body>
+      </td>
+    </tr>
+  </table>
+
+  
+  
+  <div id="stockChart"></div>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.2.0/math.min.js"></script>
+  <!-- Leaflet JavaScript -->
+  <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
+  <!-- D3 JavaScript -->
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <!-- Our JavaScript -->
+  <!-- <script type="text/javascript" src="../static/js/logic.js"></script> -->
+  <!-- <script type="text/javascript" src="../static/js/airPollution.js"></script> -->
+  <script type="text/javascript" src="../static/js/unemployment.js"></script>
+  <script type="text/javascript" src="../static/js/stock.js"></script>
+  <!-- API Key-->
+  <script type="text/javascript" src="../static/js/config.js"></script>
+</body>
+
 </html>
