updating map icons and fixing map layer bug

--- a/master/static/css/styles.css
+++ b/master/static/css/styles.css
@@ -3,3 +3,11 @@
     -moz-box-sizing: content-box;
     box-sizing: content-box;
   }
+
+  .fa-fire {
+    color: red;
+  }
+  
+  .fa-bullhorn {
+    color: darkgray;
+  }
