added national mobility and headline info

--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -256,10 +256,11 @@ The above copyright notice and this permission notice shall be included in all c
   <script type="text/javascript" src="../static/js/GT-project/leaflet-heat.js"></script>
   <script src='../static/js/GT-project/us-states.js'></script>
   <!-- created js files -->
+  <script src='../static/js/GT-project/config.js'></script>
   <script src='../static/js/GT-project/logic_slider_map.js'></script>
   <script src="../static/js/GT-project/covid_logic.js"></script>
   <script src="../static/js/GT-project/ratings_logic.js"></script>
-  <script src="../static/js/GT-project/all_plots.js"></script>
+  <script src="../static/js/GT-project/all_plot.js"></script>
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
   <script src="../static/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
   <script>
