--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -51,8 +51,8 @@ The above copyright notice and this permission notice shall be included in all c
     </div>
     </div>
   </nav>
-  <div class="page-header header-filter" data-parallax="true"
-    style="background-image: url('../static/img/first_bg2.jpg')">
+  <div id='background-NYT' class="page-header header-filter" data-parallax="true"
+    style="background-image: url('https://static01.nyt.com/images/2020/02/02/us/02iraq-airport-sub2/02iraq-airport-sub2-videoLarge-v2.jpg')">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
