updating state counter

--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -230,6 +230,7 @@ The above copyright notice and this permission notice shall be included in all c
       </div>
     </div>
   </footer>
+  
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"></script>
@@ -251,14 +252,16 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"></script>
   <!-- leaflet files -->
+ 
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+  <script src="https://cdn.rawgit.com/hayeswise/Leaflet.PointInPolygon/v1.0.0/wise-leaflet-pip.js"></script>
   <script type="text/javascript" src="../static/js/GT-project/config.js"></script>
   <script type="text/javascript" src="../static/js/GT-project/leaflet-heat.js"></script>
-  <script src='../static/js/GT-project/us-states.js'></script>
+  <script src='../static/js/GT-project/us-states_update.js'></script>
   <!-- created js files -->
-  <script src='../static/js/GT-project/logic_slider_map.js'></script>
+  <script src='../static/js/GT-project/logic_slider_map_state_update.js'></script>
   <script src="../static/js/GT-project/covid_logic.js"></script>
   <script src="../static/js/GT-project/ratings_logic.js"></script>
   <script src="../static/js/GT-project/all_plots.js"></script>
