create state ui route

--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -59,8 +59,7 @@ The above copyright notice and this permission notice shall be included in all c
           <h1 class="title">Looking back on the year 2020</h1>
           <h4>An eventful period of time to say the least. Take a closer look at some of the major occurrences in the
             United States this year, and how they shaped the country.</h4>
-          <h4 id='NYT_headline'>Start by selecting a date with the slider above. **we can push the NYT headline here
-            (along w/ credits ofc)**</h4>
+          <h4 id='NYT_headline'>U.S. Strike in Iraq Kills Qassim Suleimani, Commander of Iranian Forces</h4>
         </div>
       </div>
     </div>
