--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -116,6 +116,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <p class="card-text">Select a state to view more specific data.</p>
                 <p>daily COVID new cases, 7-day moving average:<span id='state_cases'></span></p>
                 <p>state unemployment:</p>
+                <div id='stateUnemp'></div>
                 <p>state mobility:</p>
               </div>
             </div>
@@ -256,6 +257,7 @@ The above copyright notice and this permission notice shall be included in all c
   <script src='../static/js/GT-project/us-states.js'></script>
   <!-- created js files -->
   <script src='../static/js/GT-project/config.js'></script>
+  <script src="../static/js/GT-project/state_plot.js"></script>
   <script src='../static/js/GT-project/logic_slider_map.js'></script>
   <script src="../static/js/GT-project/covid_logic.js"></script>
   <script src="../static/js/GT-project/ratings_logic.js"></script>
