--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -118,6 +118,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <p>state unemployment:</p>
                 <div id='stateUnemp'></div>
                 <p>state mobility:</p>
+                <div id='statechart'></div>
               </div>
             </div>
             <!-- end state card -->
