--- a/master/static/css/material-kit.css
+++ b/master/static/css/material-kit.css
@@ -11631,7 +11631,7 @@ a .material-icons {
 }
 
 .main {
-  background: #ffffff;
+  background: whitesmoke;
   position: relative;
   z-index: 3;
 }
