--- a/master/templates/index.html
+++ b/master/templates/index.html
@@ -140,7 +140,7 @@ The above copyright notice and this permission notice shall be included in all c
               <h4 class="card-header card-header-primary">A closer look at the states</h4>
               <div class="card-body">
                 <p class="description">Select a state on the map to the left to view more specific data.</p>
-                <strong><p>State mobility:</p></strong>
+                <!-- <strong><p>State mobility:</p></strong> -->
                 <div id='statechart'></div>
                 <strong><p>Daily COVID new cases to selected date, 7-day moving average:<span id='state_cases'></span></p></strong>
                 <strong><p>State unemployment:</p></strong>
