--- a/templates/index.html
+++ b/templates/index.html
@@ -310,7 +310,7 @@ The above copyright notice and this permission notice shall be included in all c
   <script src='../static/js/GT-project/us-states_update.js'></script>
   <!-- created js files -->
 
-  <script src='../static/js/GT-project/config.js'></script>
+  <!-- <script src='../static/js/GT-project/config.js'></script> -->
   <script src="../static/js/GT-project/state_plot.js"></script>
   <script src='../static/js/GT-project/logic_slider_map.js'></script>
   <script src="../static/js/GT-project/covid_logic.js"></script>
