--- a/templates/index.html
+++ b/templates/index.html
@@ -305,7 +305,7 @@ The above copyright notice and this permission notice shall be included in all c
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
   <script src="https://cdn.rawgit.com/hayeswise/Leaflet.PointInPolygon/v1.0.0/wise-leaflet-pip.js"></script>
-  <script type="text/javascript" src="../static/js/GT-project/config.js"></script>
+<!--   <script type="text/javascript" src="../static/js/GT-project/config.js"></script> -->
   <script type="text/javascript" src="../static/js/GT-project/leaflet-heat.js"></script>
   <script src='../static/js/GT-project/us-states_update.js'></script>
   <!-- created js files -->
