--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@ The above copyright notice and this permission notice shall be included in all c
               <div class="card-body ">
                 <div class="tab-content text-center">
                   <div class="tab-pane active" id="case_increases">
-                    <div id='us_plot'></div>
+                    <div id='us_plot' style="height: 500px;"></div>
                   </div>
                   <div class="tab-pane" id="totals">
                     <div>
@@ -292,6 +292,10 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <!-- plotly js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <!-- amcharts -->
+  <script src="//cdn.amcharts.com/lib/4/core.js"></script>
+	<script src="//www.amcharts.com/lib/4/charts.js"></script>
+	<script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
   <!-- math.js -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.2.0/math.min.js"></script>
   <!-- moment.js -->
@@ -300,17 +304,13 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.2/nouislider.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.2.0/wNumb.min.js"></script>
   <!-- leaflet files -->
-
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
   <script src="https://cdn.rawgit.com/hayeswise/Leaflet.PointInPolygon/v1.0.0/wise-leaflet-pip.js"></script>
-<!--   <script type="text/javascript" src="../static/js/GT-project/config.js"></script> -->
   <script type="text/javascript" src="../static/js/GT-project/leaflet-heat.js"></script>
   <script src='../static/js/GT-project/us-states_update.js'></script>
   <!-- created js files -->
-
-  <!-- <script src='../static/js/GT-project/config.js'></script> -->
   <script src="../static/js/GT-project/state_plot.js"></script>
   <script src='../static/js/GT-project/logic_slider_map.js'></script>
   <script src="../static/js/GT-project/covid_logic.js"></script>
@@ -319,8 +319,6 @@ The above copyright notice and this permission notice shall be included in all c
   <script src="../static/js/GT-project/unemployment.js"></script>
   <script src="../static/js/GT-project/stock.js"></script>
   
-  
-
   <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
   <script src="../static/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
   <script>
