add resizing for columns in index, misc. covid chart debugging

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@ The above copyright notice and this permission notice shall be included in all c
     style="background-image: url('https://static01.nyt.com/images/2020/02/02/us/02iraq-airport-sub2/02iraq-airport-sub2-videoLarge-v2.jpg')">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col col-12 col-md-6">
           <h2 class="title">Looking back on the year 2020</h2>
           <h4>An eventful period of time to say the least. Take a closer look at some of the major occurrences in the
             United States this year, and how they shaped the country. Select a date with the slider above.</h4><br>
@@ -72,7 +72,7 @@ The above copyright notice and this permission notice shall be included in all c
     <div class='section'>
       <div class="container">
         <div class='row'>
-          <div class='col-md-5'>
+          <div class='col col-12 col-md-5'>
             <!-- start carousel card -->
             <div class="card">
               <h4 class="card-header card-header-primary">Worth 1,000 words</h4>
@@ -88,7 +88,7 @@ The above copyright notice and this permission notice shall be included in all c
             </div>
             <!-- end carousel card -->
           </div>
-          <div class='col-md-7'>
+          <div class='col col-12 col-md-7'>
             <!-- start approval ratings card -->
             <div class="card">
               <h4 class="card-header card-header-primary">Presidential approval ratings</h4>
@@ -101,7 +101,7 @@ The above copyright notice and this permission notice shall be included in all c
           </div>
         </div>
         <div class='row'>
-          <div class='col-8'>
+          <div class='col col-12 col-md-8'>
             <!-- start map card -->
             <div class="card">
               <h4 class="card-header card-header-primary">Wildfires & social unrest: a look at the country today</h4>
@@ -134,7 +134,7 @@ The above copyright notice and this permission notice shall be included in all c
             </div>
             <!-- end map card -->
           </div>
-          <div class='col-4'>
+          <div class='col col-12 col-md-4'>
             <!-- start state card -->
             <div class="card">
               <h4 class="card-header card-header-primary">A closer look at the states</h4>
@@ -151,7 +151,7 @@ The above copyright notice and this permission notice shall be included in all c
           </div>
         </div>
         <div class='row'>
-          <div class='col-7'>
+          <div class='col col-12 col-md-7'>
             <br>
             <!-- start US COVID card -->
             <div class="card card-nav-tabs">
@@ -194,7 +194,7 @@ The above copyright notice and this permission notice shall be included in all c
             </div>
             <!-- end US COVID card -->
           </div>
-          <div class='col-5'>
+          <div class='col col-12 col-md-5'>
             <br>
             <!-- start mobility card, **or we could put it in the COVID navtabs** -->
             <div class="card">
@@ -208,7 +208,7 @@ The above copyright notice and this permission notice shall be included in all c
           </div>
         </div>
         <div class="row">
-          <div class='col-6'>
+          <div class='col col-12 col-md-6'>
             <!-- start stock data card -->
             <div class="card">
               <h4 class="card-header card-header-primary">Stock prices</h4>
@@ -238,7 +238,7 @@ The above copyright notice and this permission notice shall be included in all c
             </div>
             <!-- end stock data card -->
           </div>
-          <div class='col-6'>
+          <div class='col col-12 col-md-6'>
             <!-- start unemployment card -->
             <div class="card">
               <h4 class="card-header card-header-primary">National unemployment</h4>
