fix state covid sparkline

--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,9 @@ The above copyright notice and this permission notice shall be included in all c
                 <p class="description">Select a state on the map to view more specific data.</p>
                 <!-- <strong><p>State mobility:</p></strong> -->
                 <div id='statechart'></div>
-                <strong><p>Daily COVID new cases to selected date, 7-day moving average:<span id='state_cases'></span></p></strong>
+                <strong><p>Daily COVID new cases to selected date, 7-day moving average:</p></strong>
+                <p id='state_covid_text'></p>
+                <span id='state_cases'></span>
                 <strong><p>State unemployment:</p></strong>
                 <div id='stateUnemp'></div>
               </div>
@@ -183,10 +185,10 @@ The above copyright notice and this permission notice shall be included in all c
                   <div class="tab-pane" id="totals">
                     <div>
                       <h3>Total COVID cases to date:</h3>
-                      <h2 class='title' id='total_cases'>No data available until March 2020.</h2>
+                      <h2 class='title' id='total_cases'>0</h2>
                       <br>
                       <h3>Total COVID-related deaths to date:</h3>
-                      <h2 class='title' id='total_deaths'>No data available until March 2020.</h2>
+                      <h2 class='title' id='total_deaths'>0</h2>
                     </div>
                   </div>
                 </div>
